{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 8,
  "lineage": "a91df735-6f26-cc30-73c0-ced1355ea250",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_databricks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fae64386-e467-4578-8954-3967ca95700e",
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-test-uks-01/providers/Microsoft.Network/virtualNetworks/vnet-databricks-test",
            "location": "uksouth",
            "name": "vnet-databricks-test",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-databricks-test-uks-01"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-databricks-test",
            "resource_group_name": "rg-databricks-test-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-test-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-private",
            "location": "uksouth",
            "name": "nsg-databricks-private",
            "resource_group_name": "rg-databricks-test-uks-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-databricks-private",
            "resource_group_name": "rg-databricks-test-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485/resourceGroups/rg-databricks-test-uks-01/providers/Microsoft.Network/networkSecurityGroups/nsg-databricks-public",
            "location": "uksouth",
            "name": "nsg-databricks-public",
            "resource_group_name": "rg-databricks-test-uks-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-databricks-public",
            "resource_group_name": "rg-databricks-test-uks-01",
            "subscription_id": "70dcb1f3-7b2f-4f8f-afa2-5ef1bf53d485"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_databricks"
          ]
        }
      ]
    }
  ]
}